package to convert e to be x10 in scientific notation

--- a/latex/preamble.tex
+++ b/latex/preamble.tex
@@ -46,6 +46,10 @@
   }%
 \fi
 
+% use \FloatBarrier to control float environ
+\usepackage[section]{placeins}
+\usepackage{siunitx}
+
  % For generating glossaries:
 \include{./glossary/glossary}
 \makeglossaries
